@@ -1,3 +1,7 @@
+drkns 20.10.2016 01:41:37 +0200 - build 4828
+
+1. Очередные танцы вокруг Maximise/Resore и Alt+F9.
+
 svs 17.10.2016 11:50:09 +0300 - build 4827
 
 1. SQLite 3.15.0
